@@ -37,6 +37,12 @@ You will need to use `3.0.0 <https://scipion-em.github.io/docs/release-3.0.0/doc
 **Latest plugin version**
 ==========================
 
+**v4.1.5**
+-----------
+
+* **new**        Compatibility with cryoSPARC v4.6
+
+
 **v4.1.4**
 -----------
 
