@@ -79,11 +79,12 @@ V4_4_0 = 'V4.4.0'
 V4_4_1 = 'V4.4.1'
 V4_5_1 = 'V4.5.1'
 V4_5_3 = 'V4.5.3'
+V4_6_0 = 'V4.6.0'
 
 SUPORTED_VERSIONS = [V3_0_0, V3_0_1, V3_1_0, V3_2_0, V3_3_0, V3_3_1,
                      V3_3_2, V4_0_0, V4_0_1, V4_0_2, V4_0_3, V4_1_0,
                      V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0,
-                     V4_4_1, V4_5_1, V4_5_3]
+                     V4_4_1, V4_5_1, V4_5_3, V4_6_0]
 
 # Symmetry dict
 CS_SYM_NAME = dict()
