@@ -52,7 +52,7 @@ class ProtCryoSparc3DFlexTraining(ProtCryosparcBase, ProtFlexBase):
     _label = '3D flex training'
     _devStatus = BETA
     _protCompatibility = [V4_1_0, V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0, V4_4_1, V4_5_1,
-                          V4_5_3]
+                          V4_5_3, V4_6_0]
     _possibleOutputs = outputs
 
     # --------------------------- DEFINE param functions ----------------------
